--- a/style.css
+++ b/style.css
@@ -194,7 +194,15 @@ label[for="settings"] {
 
 
 /* Change keys section */
-
+#change-keys-outer {
+  margin: 5px;
+  padding: 10px;
+  background: #0002;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  display: none;
+}
 #change-keys-outer section {
   flex-direction: column;
   align-items: start;
@@ -202,6 +210,7 @@ label[for="settings"] {
 
 h3 {
   margin: 0;
+  font-weight: 400;
 }
 
 .content-keys {
